Adicionando preview de pdfs

--- a/src/assets/styles/abstracts/_icons.scss
+++ b/src/assets/styles/abstracts/_icons.scss
@@ -15,30 +15,31 @@
 // Icon code array
 
 $icons: (
-  lupa: "\e900",
-  arrow-left: "\e901",
-  arrow-b-left: "\e902",
-  arrow-b-right: "\e903",
+  arrow-b-left: "\e900",
+  arrow-b-right: "\e901",
+  arrow-c-left: "\e902",
+  arrow-left: "\e903",
   arrow-right: "\e904",
-  pause: "\e905",
-  menu: "\e906",
-  reverse: "\e907",
-  close: "\e908",
-  contrast: "\e909",
-  disabled: "\e90a",
-  download: "\e90b",
-  facebook: "\e90c",
-  instagram: "\e90d",
-  libras: "\e90e",
-  linkedin: "\e90f",
-  minus-font: "\e919",
-  play-round: "\e91a",
-  play: "\e91b",
-  plus-font: "\e91c",
-  profile: "\e91d",
-  twitter: "\e91e",
-  whatsapp: "\e91f",
-  youtube: "\e920",
+  close: "\e905",
+  contrast: "\e906",
+  disabled: "\e907",
+  download: "\e908",
+  facebook: "\e909",
+  instagram: "\e90a",
+  libras: "\e90b",
+  linkedin: "\e90c",
+  lupa: "\e90d",
+  menu: "\e90e",
+  minus-font: "\e90f",
+  pause: "\e910",
+  play: "\e911",
+  play-round: "\e912",
+  plus-font: "\e913",
+  profile: "\e914",
+  reverse: "\e915",
+  twitter: "\e916",
+  whatsapp: "\e917",
+  youtube: "\e918"
 );
 
 @each $name, $content in $icons {
