--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
@@ -5,7 +5,17 @@
         <div class="box">
 
           <div class="data">
-            <h2 class="proxima-nova-th">UM NOVO TEMPO PARA O MPU</h2>
+            <div class="cabecalho">
+              <h2 class="proxima-nova-th">UM NOVO TEMPO PARA O MPU</h2>
+
+              <div class="actions">
+                <a href="#">
+                  <span>Ver em PDF</span>
+                  <i class="icon-download"></i>
+                </a>
+              </div>
+            </div>
+
             <p>Após apreciação pelo Congresso Nacional do plano de cargos e salários,
               a Lei nº 8.628/1993 criou a carreira de apoio técnico-administrativo do MPU.
               O primeiro concurso, realizado em 1993, foi liderado pelo procurador-geral
@@ -67,7 +77,17 @@
       <div class="item">
         <div class="box">
           <div class="data">
-            <h2 class="proxima-nova-th">DESCENTRALIZAÇÃO E CAPILARIDADE</h2>
+            <div class="cabecalho">
+              <h2 class="proxima-nova-th">DESCENTRALIZAÇÃO E CAPILARIDADE</h2>
+
+              <div class="actions">
+                <a href="#">
+                  <span>Ver em PDF</span>
+                  <i class="icon-download"></i>
+                </a>
+              </div>
+            </div>
+
             <p>Com raízes na Constituição de 1891, o MPF consolidou sua estrutura<br/> moderna após a Constituição de 1988, que lhe garantiu mais autonomia.<br/> A evolução dos concursos reflete a importância da carreira.</p>
           </div>
 
@@ -143,7 +163,7 @@
             </div>
 
             <div class="conteudo">
-              <div class="item active" id="1993">
+              <div class="item proxima-nova-md active" id="1993">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -163,7 +183,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="1996">
+              <div class="item proxima-nova-md" id="1996">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -183,7 +203,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="1999">
+              <div class="item proxima-nova-md" id="1999">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -203,7 +223,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2004">
+              <div class="item proxima-nova-md" id="2004">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -223,7 +243,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2011">
+              <div class="item proxima-nova-md" id="2011">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -243,7 +263,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2012">
+              <div class="item proxima-nova-md" id="2012">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -263,7 +283,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2013">
+              <div class="item proxima-nova-md" id="2013">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -283,7 +303,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2016">
+              <div class="item proxima-nova-md" id="2016">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -303,7 +323,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2017">
+              <div class="item proxima-nova-md" id="2017">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -323,7 +343,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2018">
+              <div class="item proxima-nova-md" id="2018">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -343,7 +363,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="item" id="2025">
+              <div class="item proxima-nova-md" id="2025">
                 <ul>
                   <li>
                     <span>Nº</span>
@@ -372,7 +392,17 @@
       <div class="item">
         <div class="box">
           <div class="data">
-            <h2 class="proxima-nova-th">CONSOLIDAÇÃO & CRESCIMENTO</h2>
+            <div class="cabecalho">
+              <h2 class="proxima-nova-th">CONSOLIDAÇÃO & CRESCIMENTO</h2>
+
+              <div class="actions">
+                <a href="#">
+                  <span>Ver em PDF</span>
+                  <i class="icon-download"></i>
+                </a>
+              </div>
+            </div>
+
             <p>O processo de descentralização ganhou força a partir dos anos 1990,
               com a estruturação nos estados e a criação das Procuradorias Regionais
               da República (2ª instância). O órgão ganhou capilaridade e uma atuação
@@ -506,7 +536,7 @@
               </div>
 
               <div class="info">
-                <strong class="instrucao content-regiao">Clique no mapa e descubra<br/> o número de servidores<br/> nomeados por região</strong>
+                <strong class="instrucao content-regiao"><i class="icon-arrow-c-left"></i>Clique no mapa e descubra<br/> o número de servidores<br/> nomeados por região</strong>
 
                 <div class="dados">
                   <div class="content-regiao" id="primeira-regiao">
