--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
@@ -1,14 +1,24 @@
 <section id="linha-do-tempo">
   <div class="align-wrapper">
-    <div class="text">
-      <h2 class="title proxima-nova-th">LINHA DO TEMPO - CONCURSO 1993</h2>
-      <p><i class="icon-lupa"></i>Clique na imagens para baixar o documento.</p>
+    <div class="cabecalho">
+      <div class="text">
+        <h2 class="title proxima-nova-th">LINHA DO TEMPO - CONCURSO 1993</h2>
+      </div>
+
+      <div class="actions">
+        <a href="#">
+          <span>Baixar em PDF</span>
+          <i class="icon-download"></i>
+        </a>
+      </div>
     </div>
 
     <ul class="slides">
       <li>
         <div class="preview">
-          <a href="@docs/1-edital-concurso.pdf"><img src="@images/document.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/1-edital-concurso.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/1-edital-concurso.pdf"><img src="@images/document.png" /></a>
         </div>
 
         <span class="data">22/04/93</span>
@@ -23,7 +33,9 @@
 
       <li>
         <div class="preview">
-          <a href="@docs/2-prova-auxiliar-vigilancia.pdf"><img src="@images/prova-auxiliar.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/2-prova-auxiliar-vigilancia.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/2-prova-auxiliar-vigilancia.pdf"><img src="@images/prova-auxiliar.png" /></a>
         </div>
 
         <span class="data">08/08/93</span>
@@ -38,7 +50,9 @@
 
       <li>
         <div class="preview">
-          <a href="@docs/3-prova-assistente-tecnico.pdf"><img src="@images/prova-assistente-tecnico.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/3-prova-assistente-tecnico.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/3-prova-assistente-tecnico.pdf"><img src="@images/prova-assistente-tecnico.png" /></a>
         </div>
 
         <span class="data">05/09/93</span>
@@ -53,7 +67,9 @@
 
       <li>
         <div class="preview">
-          <a href="@docs/4-homologacao-auxiliar.pdf"><img src="@images/resultado-auxiliar.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/4-homologacao-auxiliar.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/4-homologacao-auxiliar.pdf"><img src="@images/resultado-auxiliar.png" /></a>
         </div>
 
         <span class="data">15/12/93</span>
@@ -68,7 +84,9 @@
 
       <li>
         <div class="preview">
-          <a href="@docs/5-homologacao-assitente-tecnico.pdf"><img src="@images/resultado-assistente-tecnico.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/5-homologacao-assistente-tecnico.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/5-homologacao-assistente-tecnico.pdf"><img src="@images/resultado-assistente-tecnico.png" /></a>
         </div>
 
         <span class="data">20/12/93</span>
@@ -83,7 +101,9 @@
 
       <li>
         <div class="preview">
-          <a href="@docs/6-nomeacao.pdf"><img src="@images/nomeacao.png" /></a>
+          <button type="button" class="open-pdf" href="assets/docs/6-nomeacao.pdf"><i class="icon-lupa"></i></button>
+
+          <a class="open-pdf" href="assets/docs/6-nomeacao.pdf"><img src="@images/nomeacao.png" /></a>
         </div>
 
         <span class="data">30/01/94</span>
