--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -17,13 +17,18 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
 .align-wrapper {
   & > .text {
     margin-bottom: 30px;
+  }
+
+  & > .text,
+  & > .cabecalho .text {
     color: #f5f5f5;
+
     h2 {
-      font-size: 3.0rem;
+      font-size: 4rem;
       font-weight: bolder;
       line-height: normal;
       display: block;
-      margin: 0 0 30px;
+      margin: 0;
     }
 
     p {
