--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -27,7 +27,7 @@
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close"><i class="icon-close"></i></span>
-    <div class="video-container"><iframe id="video" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe></div>
+    <div class="video-container"><iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe></div>
   </div>
 </div>
 
