--- a/src/assets/styles/pages/_default-layout.scss
+++ b/src/assets/styles/pages/_default-layout.scss
@@ -80,7 +80,7 @@ header {
       width: 100%;
       height: 100%;
       display: block;
-      background: url("@images/app-logo.png") no-repeat center top;
+      background: url("@images/app-logo.svg") no-repeat center top;
       background-size: cover;
       color: transparent;
       font-size: 0;
