--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -4,7 +4,7 @@
   <title>{{ title }}</title>
 
   <!-- load source favicon via Webpack alias '@images' -->
-  <link href="@images/favicon.png" rel="icon" type="image/png">
+  <link href="@images/favicon.png?2" rel="icon" type="image/png">
 
   <!-- load global source script via Webpack alias '@scripts' -->
   <script src="@scripts/common.js" defer="defer"></script>
