--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -9,7 +9,7 @@
   <!-- load global source script via Webpack alias '@scripts' -->
   <script src="@scripts/common.js" defer="defer"></script>
 
-  <meta name="viewport" content="width=1280, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- block for specific page styles -->
   {% block styles %}{% endblock %}
 </head>
