--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.html
@@ -1,5 +1,7 @@
 <section id="dados-do-concurso">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="owl-carousel owl-theme">
       <div class="item">
         <div class="box">
