--- a/src/views/pages/home/secoes/depoimentos/_depoimentos.html
+++ b/src/views/pages/home/secoes/depoimentos/_depoimentos.html
@@ -1,5 +1,7 @@
 <section id="depoimentos">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="text">
       <h2>DO PASSADO AO FUTURO</h2>
       <p>Os servidores pioneiros do MPF representam um patrimônio vivo da Instituição,<br/> servindo como base sólida para o futuro. Há 30 anos, eles embarcaram em um caminho <br/> de desafios e conquistas para a construção da Justiça no Brasil. <br/> Hoje contamos com mais de 700 servidores do primeiro concurso ainda ativos e convidamos alguns<br/> deles a compartilhar um pouco de suas experiências e histórias.</p>
