--- a/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.html
+++ b/src/views/pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.html
@@ -1,8 +1,12 @@
 <section id="fazemos-diferenca">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="row">
       <div class="column">
-        <h2 class="image">Nós fazemos a diferença, o mpf faz história.</h2>
+        <h2 class="image">
+          <img src="@images/mpf-faz-diferenca.png" />
+          Nós fazemos a diferença, o mpf faz história.</h2>
       </div>
 
       <div class="column">
