--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
@@ -1,5 +1,7 @@
 <section id="linha-do-tempo">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="cabecalho">
       <div class="text">
         <h2 class="title proxima-nova-th">LINHA DO TEMPO - CONCURSO 1993</h2>
@@ -13,7 +15,7 @@
       </div>
     </div>
 
-    <ul class="slides">
+    <ul class="slides owl-carousel owl-theme">
       <li>
         <div class="preview">
           <button type="button" class="open-pdf" href="assets/docs/1-edital-concurso.pdf"><i class="icon-lupa"></i></button>
