--- a/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
+++ b/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
@@ -1,5 +1,7 @@
 <section id="novo-tempo">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="text">
       <h2 class="proxima-nova-th">UM NOVO TEMPO PARA O MPU</h2>
       <p>Os secretários-gerais de 30 anos e de hoje falam sobre sua relação<br/>com a institução e seu impacto para a sociedade.</p>
