--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
@@ -1,5 +1,7 @@
 <section id="questoes-da-prova">
   <div class="align-wrapper">
+    <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
+
     <div class="text">
       <h2 class="proxima-nova-th">QUESTÕES DA PROVA</h2>
       <p>Responda algumas das questões da prova de 1993 e teste seus conhecimentos</p>
