--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss
@@ -1,4 +1,5 @@
 @import '@styles/abstracts/_variables.scss';
+@import '@styles/abstracts/_mixins.scss';
 
 #questoes-da-prova {
   background: #f5f5f5;
@@ -97,6 +98,35 @@
     display: flex;
     flex-direction: column;
 
+    button {
+      transition: all ease-in-out .2s;
+      font-size: 1.6rem;
+      padding: 10px 20px;
+      background-color: #333380;
+      color: #fff;
+      border-radius: 20px;
+      border: 1px solid #333380;
+      cursor: pointer;
+
+      body.contraste & {
+        background: none;
+        border-color: $contraste-font-color;
+      }
+    }
+
+    button:hover {
+      opacity: .8;
+    }
+
+    button {
+      font-weight: bold;
+
+      &.outline {
+        background: #FFF;
+        color: #333380;
+      }
+    }
+
     body.contraste & {
       background: $contraste-background-color;
       border-color: $contraste-font-color;
@@ -119,6 +149,10 @@
 
       body.contraste & {
         //border-bottom: 1px solid $contraste-font-color;
+      }
+
+      @include mobile-tablet {
+        flex-direction: column;
       }
 
       .resultado {
@@ -147,6 +181,11 @@
         background: #333380;
         font-weight: bold;
 
+        @include mobile-tablet {
+          width: 100%;
+          text-align: center;
+        }
+
         body.contraste & {
           background: $contraste-background-color;
         }
@@ -159,6 +198,10 @@
         align-items: center;
         background: #7d2b8a;
         padding: 0 25px;
+
+        @include mobile-tablet {
+          padding: 15px;
+        }
 
         body.contraste & {
           background: $contraste-background-color;
@@ -219,37 +262,10 @@
   }
 
   /* Button Styles */
-  button {
-    transition: all ease-in-out .2s;
-    font-size: 1.6rem;
-    padding: 10px 20px;
-    background-color: #333380;
-    color: #fff;
-    border-radius: 20px;
-    border: 1px solid #333380;
-    cursor: pointer;
 
-    body.contraste & {
-      background: none;
-      border-color: $contraste-font-color;
-    }
-  }
-
-  button:hover {
-    opacity: .8;
-  }
 
   .hidden {
     display: none;
-  }
-
-  button {
-    font-weight: bold;
-
-    &.outline {
-      background: #FFF;
-      color: #333380;
-    }
   }
 
   .actions {
@@ -260,6 +276,22 @@
 
     > div {
       min-width: 110px;
+
+      @include mobile-tablet {
+        min-width: 50%;
+      }
+
+      &:nth-child(2) {
+        @include mobile-tablet {
+          display: none;
+        }
+      }
+    }
+  }
+
+  #next-button {
+    @include mobile-tablet {
+      float: right;
     }
   }
 
@@ -270,6 +302,10 @@
     text-align: center;
     display: block;
     flex: 1;
+
+    @include mobile-tablet {
+      display: none;
+    }
 
     &.hidden {
       display: none;
