--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -3,6 +3,7 @@
         <div class="logo">
             <h1 id="logo">
                 <a title="1 concurso de servidores do MPU" href="index.html">
+                    <img src="@images/app-logo.svg" />
                     1 concurso de servidores do MPU
                 </a>
             </h1>
