--- a/src/views/partials/navigation.html
+++ b/src/views/partials/navigation.html
@@ -1,5 +1,7 @@
 <nav id="menu">
   <div class="align-wrapper">
+    <button type="button" id="menu-close"><i class="icon-close"></i> <span class="Fechar">Fechar</span></button>
+
     <ul>
       <li><a href="#inicio">Início</a></li>
       <li><a href="#novo-tempo">Novo tempo</a></li>
