--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as var;
+@import '@styles/abstracts/_mixins.scss';
 
 html,
 body {
@@ -66,5 +67,13 @@ body {
 
   > :not(:first-child) {
     flex-grow: 1;
+  }
+}
+
+.mobile-only {
+  display: none !important;
+
+  @include mobile-tablet {
+    display: block !important;
   }
 }
