--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -231,6 +231,11 @@ $font-size: 1.6rem !default;
 html {
   font-size: 62.5%; /* 62.5% of 16px = 10px, making 1rem = 10px */
   transition: font-size ease-in-out .2s;
+
+
+  @include mobile-tablet {
+    font-size: 58%;
+  }
 }
 
 body {
