--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -40,11 +40,22 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
   }
 }
 
+.menu-open {
+  display: block;
+  margin-bottom: 30px !important;
+  align-self: flex-start;
 
+  i:before {
+    font-size: 30px;
+    color: #2E2E82;
+  }
+}
 
 .card {
   flex: 1;
   perspective: 1000px;
+  display: flex;
+  flex-direction: column;
 
   .bt-video {
     @include icomoon-icon('play-round');
@@ -61,55 +72,63 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
   }
 
   .card-inner{
-    transition: transform .5s;
+    display: grid;
+    transition-duration: 0.6s;
+    transition-timing-function: ease-in-out;
     transform-style: preserve-3d;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transform: rotateY(0deg);
+    flex: 1;
 
     &.active {
-      transform: rotateY(180deg);
+      transform: rotateY(-180deg);
     }
+
+    & > div {
+      /*---------*/
+      grid-row: 1/2;
+      grid-column: 1/2;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+
+    .card-front {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform: rotateY(0deg);
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        border-radius: 50px;
+      }
+    }
+
 
     .card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
       backface-visibility: hidden;
+      transform: rotateY(-180deg);
       display: flex;
       justify-content: center;
-      align-items: flex-start;;
+      align-items: flex-start;
       flex-direction: column;
-    }
-  }
-
-  .card-front {
-    width: 100%;
-    height: 100%;
-    position: relative;
-
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
+      background: #7d2b8a;
+      padding: 50px;
       border-radius: 50px;
+      width: 100%;
+
+      @include mobile-tablet {
+        padding: 20px;
+      }
+
+      body.contraste & {
+        background: $contraste-background-color;
+      }
+
     }
   }
 
-  .card-back{
-    background: #7d2b8a;
-    padding: 50px;
-    border-radius: 50px;
-    width: 100%;
-    transform: rotateY(180deg);
 
-    body.contraste & {
-      background: $contraste-background-color;
-    }
-  }
 
   .reverse {
     position: absolute;
@@ -129,10 +148,18 @@ html { scroll-behavior: smooth; scroll-padding-top: 80px; /* Ativa a rolagem sua
     margin-bottom: 30px;
     width: 100%;
 
+    @include mobile-tablet {
+      gap: 15px;
+    }
+
     .avatar {
       width: 161px;
       height: 161px;
       flex-shrink: 0;
+
+      @include mobile-tablet {
+        max-width: 110px;
+      }
 
       img {
         object-fit: cover;
@@ -211,6 +238,18 @@ button {
   overflow: auto;
   background-color: rgba(0,0,0,0.8);
   padding-top: 60px;
+
+  .align {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+
+  @include mobile-tablet {
+    padding: 25px;
+  }
 }
 
 .modal-content {
@@ -222,6 +261,12 @@ button {
   display: flex;
   flex-direction: column;
   position: relative;
+
+  @include mobile-tablet {
+    width: 100%;
+    marign: 0;
+
+  }
 }
 
 .close {
