--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -25,9 +25,11 @@
 {% include "src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html" %}
 
 <div id="myModal" class="modal">
-  <div class="modal-content">
-    <span class="close"><i class="icon-close"></i></span>
-    <div class="video-container"><iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe></div>
+  <div class="align">
+    <div class="modal-content">
+      <span class="close"><i class="icon-close"></i></span>
+      <div class="video-container"><iframe id="iframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe></div>
+    </div>
   </div>
 </div>
 
