--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
@@ -1,4 +1,5 @@
 @import '@styles/abstracts/_variables.scss';
+@import '@styles/abstracts/_mixins.scss';
 
 $cor-inscritos: #2e2e82;
 $cor-candidatos: #af89b1;
@@ -49,6 +50,10 @@ $cor-por-ramo: #73ade0;
     border: 1px solid #7f2a7e;
     border-radius: 50px;
 
+    @include mobile-tablet {
+      padding: 20px clamp(20px, 3.91%, 50px);
+    }
+
     body.contraste & {
       border-color: $contraste-font-color;
     }
@@ -65,10 +70,18 @@ $cor-por-ramo: #73ade0;
         margin-bottom: 50px;
         margin: 0 0 30px;
 
+        @include mobile-tablet {
+          flex-direction: column;
+          gap: 15px;
+        }
 
         h2 {
           font-size: 4rem;
           margin: 0;
+
+          @include mobile-tablet {
+            font-size: 2rem;
+          }
         }
 
         .actions {
@@ -110,12 +123,21 @@ $cor-por-ramo: #73ade0;
         display: block;
         margin-bottom: 15px;
         font-weight: bold;
+
+        @include mobile-tablet {
+          display: none;
+        }
       }
       .align {
         display: flex;
         flex-direction: row;
         align-items: flex-start;
         gap: 50px;
+
+        @include mobile-tablet {
+          flex-direction: column;
+          gap: 15px;
+        }
 
         .labels {
           list-style: none;
@@ -173,7 +195,7 @@ $cor-por-ramo: #73ade0;
 
         .icones {
           display: grid;
-          grid-template-columns: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+          grid-template-columns: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
           gap: 1px;
           list-style: none;
           margin: 0;
@@ -182,6 +204,12 @@ $cor-por-ramo: #73ade0;
           i:before {
             color: #b3b3b3;
             transition: all ease-in-out .2s;
+          }
+
+          li:nth-child(156) ~ li {
+            @include mobile-tablet {
+              display: none;
+            }
           }
 
           &.inscritos {
@@ -300,8 +328,17 @@ $cor-por-ramo: #73ade0;
         justify-content: center;
         gap: 50px;
 
+        @include mobile-tablet {
+          gap: 15px;
+          flex-direction: column;
+        }
+
         .info {
           width: 500px;
+
+          @include mobile-tablet {
+            width: auto;
+          }
 
           .instrucao {
             font-size: 3.2rem;
@@ -315,6 +352,17 @@ $cor-por-ramo: #73ade0;
 
             i:before {
               font-size: 95px;
+            }
+
+            @include mobile-tablet {
+              //display: none;
+              font-size: 0;
+            }
+
+            i {
+              @include mobile-tablet {
+                display: none;
+              }
             }
           }
 
@@ -408,6 +456,7 @@ $cor-por-ramo: #73ade0;
         padding: 0;
         margin: 0;
       }
+
       .instrucao {
         margin-bottom: 30px;
 
@@ -424,6 +473,10 @@ $cor-por-ramo: #73ade0;
           font-size: 1.6rem;
           display: block;
           line-height: normal;
+
+          @include mobile-tablet {
+            display: none;
+          }
         }
       }
 
@@ -434,6 +487,10 @@ $cor-por-ramo: #73ade0;
         gap: 20px;
         color: #434244;
         margin-bottom: 30px;
+
+        @include mobile-tablet {
+          flex-direction: column;
+        }
 
         .label {
           display: flex;
@@ -447,6 +504,10 @@ $cor-por-ramo: #73ade0;
           span {
             font-size: 1.8rem;
             font-weight: bold;
+
+            @include mobile-tablet {
+              display: none;
+            }
           }
         }
 
@@ -456,6 +517,10 @@ $cor-por-ramo: #73ade0;
           flex-direction: row;
           justify-content: space-between;
           position: relative;
+
+          @include mobile-tablet {
+            gap: 2px;
+          }
 
           &:before {
             content: "";
@@ -692,6 +757,11 @@ $cor-por-ramo: #73ade0;
               //display: block;
             }
 
+            @include mobile-tablet {
+              display: grid;
+              grid-template-columns: 50% 50%;
+            }
+
             li {
               display: flex;
               flex-direction: column;
@@ -699,6 +769,27 @@ $cor-por-ramo: #73ade0;
               margin-left: 40px;
               border-left: 1px solid black;
               gap: 10px;
+
+              @include mobile-tablet {
+                margin: 0;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                padding: 10px;
+              }
+
+              &:nth-child(3) {
+                @include mobile-tablet {
+                  border-left: none;
+                  border-top: 1px solid black;
+                }
+              }
+
+              &:nth-child(4) {
+                @include mobile-tablet {
+                  border-top: 1px solid black;
+                }
+              }
 
               &:first-child {
                 padding-left: 0;
@@ -745,6 +836,11 @@ $cor-por-ramo: #73ade0;
     display: table !important;
     margin: 0 auto;
     float: left;
+
+    @include mobile-tablet {
+      float: none;
+      transform: scale(.5) !important;
+    }
   }
   #map .state {
     cursor: pointer;
@@ -909,31 +1005,32 @@ $cor-por-ramo: #73ade0;
       transform: scale(1);
     }
   }
+
   @media(max-width: 991px){
-    .parceiros .two .parca .estado{
-      display: block;
-      margin: 45px auto;
-      float: none;
-      position: absolute;
-      left: 0;
-      right: 0;
-      min-width: 160px;
-      max-width: 306px;
-    }
-    .box-mapa{
-      position: relative;
-      top: 0;
-      left: initial;
-      display: table;
-      margin: 0 auto;
-    }
+    //.parceiros .two .parca .estado{
+    //  display: block;
+    //  margin: 45px auto;
+    //  float: none;
+    //  position: absolute;
+    //  left: 0;
+    //  right: 0;
+    //  min-width: 160px;
+    //  max-width: 306px;
+    //}
+    //.box-mapa{
+    //  position: relative;
+    //  top: 0;
+    //  left: initial;
+    //  display: table;
+    //  margin: 0 auto;
+    //}
   }
   @media(max-width: 500px){
-    .box-mapa{
-      display: none;
-    }
-    .parca select{
-      display: block;
-    }
+    //.box-mapa{
+    //  display: none;
+    //}
+    //.parca select{
+    //  display: block;
+    //}
   }
 }
