--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
@@ -1,4 +1,5 @@
 @import '@styles/abstracts/_variables.scss';
+@import '@styles/abstracts/_mixins.scss';
 
 #linha-do-tempo {
   background: #7d2b8a;
@@ -7,8 +8,14 @@
     background: $contraste-background-color;
   }
 
+  .menu-open {
+    i:before {
+      color: #FFF;
+    }
+  }
+
   .align-wrapper {
-    padding: 50px 0;
+    padding: 50px clamp(30px, 3.91%, 50px);
   }
 
   .cabecalho {
@@ -17,6 +24,10 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 50px;
+
+    @include mobile-tablet {
+      flex-direction: column;
+    }
 
     .text {
       p{
@@ -38,6 +49,11 @@
     }
 
     .actions {
+      @include mobile-tablet {
+        order: 0;
+        gap: 25px;
+      }
+
       a {
         display: flex;
         flex-direction: row;
@@ -67,6 +83,35 @@
     gap: 30px;
     justify-content: center;
 
+    @include mobile-tablet {
+      flex-direction: column;
+    }
+
+    &.owl-theme {
+      .owl-dots {
+        border: 1px solid #aaaaca;
+
+        .owl-dot {
+
+          &.active {
+            span {
+              background: #999999;
+            }
+          }
+
+          &:hover {
+            span {
+              background: #999999;
+            }
+          }
+
+          span {
+            background: #f5f5f5;
+          }
+        }
+      }
+    }
+
     li {
       width: 16.66%;
       display: flex;
@@ -74,6 +119,33 @@
       align-items: center;
       gap: 34px;
       position: relative;
+
+      @include mobile-tablet {
+        width: 100%;
+
+        .bullet {
+          order: 2;
+        }
+
+        .data {
+          order: 3;
+        }
+
+        .preview {
+          order: 4;
+
+          button {
+            order: 2;
+          }
+        }
+
+        .etapa {
+          order: 1;
+          border-top: none !important;
+          border-bottom: 1px solid #a3d0f0;
+          justify-content: flex-end;
+        }
+      }
 
       &:first-child {
         .bullet {
@@ -96,6 +168,10 @@
 
       &:nth-child(even) {
         margin-top: 153px;
+
+        @include mobile-tablet {
+          margin: 0;
+        }
 
         .bullet {
           order: 2;
@@ -204,6 +280,11 @@
         body.contraste & {
           background: $contraste-background-color;
         }
+
+        @include mobile-tablet {
+          width: fit-content;
+          height: auto;
+        }
       }
 
       .bullet {
@@ -227,6 +308,8 @@
           body.contraste & {
             background: $contraste-font-color;
           }
+
+
         }
 
         &:before {
@@ -242,6 +325,10 @@
           height: 1px;
           transform: translateY(7px);
           left: 0;
+
+          @include mobile-tablet {
+            display: none;
+          }
         }
       }
 
@@ -259,6 +346,10 @@
         border-top: 1px solid #a3d0f0;
         padding: 30px 0;
         font-size: 1.6rem;
+
+        @include mobile-tablet {
+          height: auto;
+        }
 
         body.contraste & {
           background: $contraste-background-color;
