--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -1,5 +1,6 @@
 <header>
     <div class="align-wrapper">
+        <button type="button" class="menu-open mobile-only"><i class="icon-menu"></i></button>
         <div class="logo">
             <h1 id="logo">
                 <a title="1 concurso de servidores do MPU" href="index.html">
